--- a/testeTicketTech/appsettings.Development.json
+++ b/testeTicketTech/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-OAB482G\\SQLEXPRESS;Database=TicketTechBanco;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    "DefaultConnection": "Server=RODRIGO;Database=TicketTechBanco;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
