criação função redefinir senha

--- a/testeTicketTech/appsettings.Development.json
+++ b/testeTicketTech/appsettings.Development.json
@@ -1,11 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=RODRIGO;Database=TicketTechBanco;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+    "DefaultConnection": "Server=DESKTOP-OAB482G\\SQLEXPRESS;Database=TicketTechBanco;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
