--- a/testeTicketTech/appsettings.json
+++ b/testeTicketTech/appsettings.json
@@ -5,6 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionStrings": { "DefaultConnection": "Server=RODRIGO;Database=TicketTechBanco;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True" },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=TicketTechBanco;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   "AllowedHosts": "*"
 }
