--- a/testeTicketTech/appsettings.Development.json
+++ b/testeTicketTech/appsettings.Development.json
@@ -1,5 +1,11 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-OAB482G\\SQLEXPRESS;Database=TicketTechBanco;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=MeuBancoLocal;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
   }
 }
